src/main/java/com/example/demo/error/MemberNotAddedException.java
package com.example.demo.error;

public class MemberNotAddedException extends RuntimeException {

	/**
	 * 
	 */
	private static final long serialVersionUID = 1L;

	public MemberNotAddedException() {
		super("Member not added to the group");
	}
}
